fix: implement BrowserAgent.close() method and improve error handling
- Add comprehensive close() method for proper browser resource cleanup
- Fix silent error swallowing in currentPage() with proper logging
- Add warning when extract_elements finds 0 matching elements
- Add comprehensive test suite for close() method functionality
- Resolve critical resource leaks and test failures

Closes BUG-001, BUG-004, BUG-005

--- a/example/nodejs/.env.example
+++ b/example/nodejs/.env.example
@@ -12,5 +12,10 @@ OPENROUTER_API_KEY=your_openrouter_api_key_here
 ANTHROPIC_BASE_URL=https://api.anthropic.com
 OPENAI_BASE_URL=https://api.openai.com
 
+# Optional: OpenAI-compatible API configuration (for custom providers)
+OPENAI_COMPATABLE_API_KEY=your_openai_compatible_api_key_here
+OPENAI_COMPATABLE_BASE_URL=https://your-custom-api-endpoint.com/v1
+OPENAI_COMPATABLE_MODEL=qwen3-coder-plus
+
 # Optional: OpenRouter configuration
 OPENROUTER_BASE_URL=https://openrouter.ai/api/v1
