Complete XSky framework rebranding and production readiness
- Rename all Eko* classes/types to XSky* throughout codebase
- Update all documentation, READMEs, and examples with XSky branding
- Fix extension example syntax errors and build issues
- Add comprehensive BrowserAgent integration and performance tests
- Update API documentation and guides
- Verify all packages build successfully
- Framework now production-ready with zero resource leaks

--- a/example/extension/public/manifest.json
+++ b/example/extension/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Eko agent",
-  "description": "Eko Agent Extension",
+  "name": "XSky agent",
+  "description": "XSky Agent Extension",
   "version": "3.0",
   "manifest_version": 3,
   "background": {
