--- a/.gitignore
+++ b/.gitignore
@@ -33,7 +33,7 @@ Thumbs.db
 
 # npm package lock files (if you don't want them tracked by Git)
 package-lock.json
-pnpm-lock.yaml
+# pnpm-lock.yaml is NOT ignored - required for CI
 yarn.lock
 
 # Test coverage directory
