fix(ci): remove dummy API keys to enable proper test skipping
Tests with real API dependencies (openai.test.ts, plan.test.ts, xsky.test.ts)
use conditional skip: process.env.OPENAI_API_KEY ? test : test.skip

Setting dummy keys caused tests to run and fail with auth errors.
Now tests will skip properly in CI when no real key is configured.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -39,6 +39,4 @@ jobs:
       run: pnpm -r --filter "./packages/*" test
       env:
         CI: true
-        # Use dummy keys for tests that need them to start but are skipped
-        OPENAI_API_KEY: sk-dummy
-        ANTHROPIC_API_KEY: sk-dummy
+        # Tests that require real API keys will skip automatically
